--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,7 +60,7 @@
   <div class="body__results">
     <mat-card>
       <mat-card-title-group>
-        <mat-card-title style="margin-bottom: 30px" >Resultados</mat-card-title>
+        <mat-card-title style="margin-bottom: 30px" >Ejemplos</mat-card-title>
       </mat-card-title-group>
       <mat-card-content>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis facere eaque perspiciatis ex, totam aut cupiditate! Laudantium ipsam impedit quas quidem! Est tenetur neque ullam. Adipisci eligendi dolorem doloremque veniam!
