--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,17 @@
   </div>
 
   <div class="header__input">
-    <form >
+    <form class="header__input__form" [formGroup]="formAnalize">
       <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>URL</mat-label>
-        <input matInput placeholder="Ingresa una URL de un articulo para identificar el sesgo" value="">
+        <mat-label>{{ isChecked == true ? 'URL' : 'TEXTO' }}</mat-label>
+        <input
+          formControlName="url"
+          matInput
+          >
       </mat-form-field>
       
       <div class="header__input__button">
-        <button mat-raised-button>Analizar</button>
+        <button (click)="analize()" mat-raised-button>Analizar</button>
       </div>
 
     </form>
@@ -24,7 +27,11 @@
 
   <div class="header__button">
     <!-- <button mat-button (click)="openDialog('0ms', '0ms')" >O ingresa tu texto</button>     -->
-    <button mat-button >O ingresa tu texto</button>    
+    <!-- <button mat-button >O ingresa tu texto</button>     -->
+
+    <mat-slide-toggle [(ngModel)]="isChecked">
+      {{isChecked == true ? 'Ingresar URL' : 'Ingresar texto'}}
+    </mat-slide-toggle>
 
   </div>
 </div>
@@ -62,8 +69,35 @@
       <mat-card-title-group>
         <mat-card-title style="margin-bottom: 30px" >Resultados</mat-card-title>
       </mat-card-title-group>
-      <mat-card-content>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis facere eaque perspiciatis ex, totam aut cupiditate! Laudantium ipsam impedit quas quidem! Est tenetur neque ullam. Adipisci eligendi dolorem doloremque veniam!
+      <mat-card-content >
+
+        <mat-spinner
+
+        *ngIf="showSpinner"
+        style="margin: auto"
+        ></mat-spinner>
+      
+
+        <table *ngIf="data != null" style="margin: auto;"  mat-table [dataSource]="data" class="mat-elevation-z8">
+          <ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
+            <th mat-header-cell *matHeaderCellDef style="padding: 30px;">
+              {{column.header}}
+            </th>
+            <td mat-cell *matCellDef="let row">
+              {{column.cell(row)}}
+              <!-- <ng-container *ngIf="column.header == 'Sesgo' || column.header == 'Sentiment'">
+                <p *ngIf=""  >&#128512;</p>
+                <p *ngIf=""  >&#128533;</p>
+              </ng-container> -->
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+
+
       </mat-card-content>
 
     </mat-card>
