--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,7 +42,7 @@
     }
 
     &__input {
-        form {
+        &__form {
             display: flex;
             justify-content: center;
             // align-items: center;
