--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,7 +67,7 @@
   <div class="body__results">
     <mat-card>
       <mat-card-title-group>
-        <mat-card-title style="margin-bottom: 30px" >Ejemplos</mat-card-title>
+        <mat-card-title style="margin-bottom: 30px" >Resultados</mat-card-title>
       </mat-card-title-group>
       <mat-card-content >
 
